# android-native-library-analysis

./: .gitignore  README.md
第三章/: 调查问卷结果.csv
第三章/APK插桩工具/: Insert_Log_to_APK.py
第三章/Monkey测试/: run_monkey.py
第五章/Tool/: config.py  main.py  module1_preprocess.py  module2_native_detect.py  module3_unify.py  module4_callgraph.py  module5_stack_extract.py  module6_annotation.py  module7_llm_infer.py  module8_result_mgmt.py
第四章/: 测试APK调用栈.txt
第四章/JNITest/: settings.gradle
第四章/JNITest/app/: build.gradle
第四章/JNITest/app/src/main/cpp/: CMakeLists.txt  nativecore.c  nativesub.c  nativesub.h
第四章/函数功能识别验证/: 人工验证结果汇总.xlsx
第四章/函数功能识别验证/BLEU/: BLEU.xlsx  bleu.py
第四章/函数功能识别验证/JNI权重计算与语义域划分后的函数调用栈与源代码/: _summary.json  android.game.prboom.json  app.usp.json  baseline_results.json  br.odb.knights.json  chat.jmp.simmanager.json  com.amanoteam.kurt.json  com.dewdrop623.androidcrypt.json  com.github.cvzi.darkmodewallpaper.json  com.limelight.json  com.oF2pks.kalturadeviceinfos.json  com.paddlesandbugs.dahdidahdit.json  com.picross.nonocross.json  com.poinsart.votar.json  com.proch.practicehub.json  com.reecedunn.espeak.json  com.sgr_b2.compass.json  de.tadris.flang.json  io.github.muntashirakon.setedit.json  io.github.pedrolcl.vmpk.json  net.alexbarry.alexgames.json  net.alexbarry.calc_android.json  net.christianbeier.droidvnc_ng.json  net.kollnig.missioncontrol.fdroid.json  org.bibledit.android.json  org.cipherdyne.fwknop2.json  org.helllabs.android.xmp.json  org.jfedor.frozenbubble.json  org.jwz.xscreensaver.json  org.lyrion.squeezelite.json  org.mosspaper.json  (+6 more)
(+16 files in other folders)
